--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>GitHub</h1>
-<h2>Stephany Carlos</h2>
-<p>Learning</p>
+<h2>Stephany Carlos Repo</h2>
+<p>Learning Sublime Text</p>
 
 
 </body>
