--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My First Repo</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
+
+	<title>Project 0</title>
 </head>
 <body>
-<h1>GitHub</h1>
-<h2>Stephany Carlos Repo</h2>
-<p>Learning Sublime Text</p>
+<h1>Project 0 Categories/Menu</h1>
+<h2>Main Page (Index.html)</h2>
+<p>Web Technology HTML SEO Ecommerce</p>
 
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab libero, cupiditate veniam officiis itaque in porro iure fugit iusto reprehenderit commodi earum cum blanditiis quos error similique quod, facere! Hic.</p>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
